// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: { base: 5, xs: 7, s: 5, m: 7, l: 5, xl: 7 } and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
nav {
  display: flex;
  justify-content: center;
  user-select: none;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 4px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  height: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  box-sizing: border-box;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
  border-color: transparent;
}
span:not(.ellipsis):focus:focus-visible::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current]:not(.ellipsis):focus::before {
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
@media(min-width:480px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:760px) {
  nav {
    counter-reset: size 5;
  }
  ul {
    gap: 8px;
  }
  li:first-child {
    margin-inline-end: 8px;
  }
  li:last-child {
    margin-inline-start: 8px;
  }
}

@media(min-width:1000px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:1300px) {
  nav {
    counter-reset: size 5;
  }
}

@media(min-width:1760px) {
  nav {
    counter-reset: size 7;
  }
}

@media(hover:hover) {
  span:not([aria-disabled]):not(.ellipsis):hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
nav {
  display: flex;
  justify-content: center;
  user-select: none;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 4px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  height: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  box-sizing: border-box;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
  border-color: transparent;
}
span:not(.ellipsis):focus:focus-visible::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current]:not(.ellipsis):focus::before {
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
@media(min-width:760px) {
  ul {
    gap: 8px;
  }
  li:first-child {
    margin-inline-end: 8px;
  }
  li:last-child {
    margin-inline-start: 8px;
  }
}

@media(hover:hover) {
  span:not([aria-disabled]):not(.ellipsis):hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
nav {
  display: flex;
  justify-content: center;
  user-select: none;
  counter-reset: size 5;
}
ul {
  display: flex;
  gap: 4px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  height: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  box-sizing: border-box;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #010205;
  outline: 0;
  border-radius: 4px;
  border-color: transparent;
}
span:not(.ellipsis):focus:focus-visible::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #010205;
  border: 2px solid #010205;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-current]:not(.ellipsis):focus::before {
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
@media(min-width:760px) {
  ul {
    gap: 8px;
  }
  li:first-child {
    margin-inline-end: 8px;
  }
  li:last-child {
    margin-inline-start: 8px;
  }
}

@media(hover:hover) {
  span:not([aria-disabled]):not(.ellipsis):hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
nav {
  display: flex;
  justify-content: center;
  user-select: none;
  counter-reset: size 7;
}
ul {
  display: flex;
  gap: 4px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  height: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  box-sizing: border-box;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #FBFCFF;
  outline: 0;
  border-radius: 4px;
  border-color: transparent;
}
span:not(.ellipsis):focus:focus-visible::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #FBFCFF;
  border: 2px solid #FBFCFF;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-current]:not(.ellipsis):focus::before {
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
@media(min-width:760px) {
  ul {
    gap: 8px;
  }
  li:first-child {
    margin-inline-end: 8px;
  }
  li:last-child {
    margin-inline-start: 8px;
  }
}

@media(hover:hover) {
  span:not([aria-disabled]):not(.ellipsis):hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
nav {
  display: flex;
  justify-content: center;
  user-select: none;
  counter-reset: size 7;
}
ul {
  display: flex;
  gap: 4px;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  height: clamp(36px, calc(calc(6px + 2.125ex) + 10vw - 20px), 40px);
  box-sizing: border-box;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #010205;
  outline: 0;
  border-radius: 4px;
  border-color: transparent;
}
span:not(.ellipsis):focus:focus-visible::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  color: #010205;
  border: 2px solid #010205;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-current]:not(.ellipsis):focus::before {
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
@media(min-width:760px) {
  ul {
    gap: 8px;
  }
  li:first-child {
    margin-inline-end: 8px;
  }
  li:last-child {
    margin-inline-start: 8px;
  }
}

@media(hover:hover) {
  span:not([aria-disabled]):not(.ellipsis):hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
}
.ellipsis::after {
  content: "…";
}"
`;
